apps/news/manifests/miniflux/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: miniflux
    app.kubernetes.io/part-of: miniflux
    app.kubernetes.io/version: 2.0.35
  name: miniflux
  namespace: news
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/name: miniflux
      app.kubernetes.io/part-of: miniflux
  template:
    metadata:
      annotations:
        checksum.config/md5: 67c1890df55a3fda9bfa59ed880bdd0c
      labels:
        app.kubernetes.io/component: server
        app.kubernetes.io/name: miniflux
        app.kubernetes.io/part-of: miniflux
        app.kubernetes.io/version: 2.0.35
    spec:
      containers:
      - env:
        - name: DATABASE_URL
          value: postgres://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@$(POSTGRES_SVC)/$(POSTGRES_DB)?sslmode=disable
        image: miniflux/miniflux:2.0.35
        imagePullPolicy: IfNotPresent
        name: miniflux
        ports:
        - containerPort: 8080
          name: http
        resources:
          limits:
            cpu: 50m
            memory: 100Mi
          requests:
            cpu: 3m
            memory: 30Mi
      restartPolicy: Always
      serviceAccountName: miniflux
